* 0.11.0-beta.3 (unreleased)
   * Fixed hard crash when loading when approaching certain NPCs
   * Fixed crash when change tab triggers a takeoff
   * Fixed Naev not starting on Mac OS
   * Fixed beam collisions (again)
   * Fixed rare hard crash when beams are being fired
   * Nerfed Sirius Fidelity so it can no longer get ludicrous levels of action speed
   * Map's discovery mode shows system features
   * Removed enemies from a certain hidden faction so the player won't have standing issues with them
   * Non-weapon outfits no longer show switch groups they are in as hot keys
   * Turn off weapon sets when changing type
   * Fixed toggle weapon sets not triggering outfits over and over as expected
   * Turn off all weapon sets when entering stealth
   * Fixed resizing not working on the background and toolkit in some cases
   * Added pilot.weapsetAddType and pilot.weapsetSetActive
   * Gave unicorp storm launchers a rarity of 2 and made it more available
   * `test_of_renewal`: fixed weapon set defaults being incorrect and increased enemy damage
   * `seek_n_destroy`: missions should work properly when boarding the target
   * `flf_diversion`, `flf_rogue`: Missions should no longer be able to have ridiculously low credit rewards
   * Fixed many typos

* 0.11.0-beta.2
   * Slim GUI now shows activated outfits and all weapons all the time
   * Collision system reworked (again) to take into account fast moving particles
   * Fixed collision polygons not properly being used
   * Added short names to some outfits such that they are easier to distinguish in the GUI
   * Allied factions won't help out the player against neutral targets
   * Added missing graphics for meditation chambers
   * Don't allow giving the player names that can't be saved
   * Updated love.filesystem to 0.11 spec renaming mkdir to createDirectory, enumerate to getDirectoryItems, and adding remove
   * Fixed toggle weapon sets not turning off with only bolt weapons